--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dev_dependencies:
   infinite_carousel: ^1.1.1
   marquee: ^2.3.0
   flutter_staggered_grid_view: ^0.7.0
+  flutter_svg: ^2.2.3
+  indexed_list_view: ^4.0.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
